@@ -4074,6 +4074,7 @@ GameSymbols GameSymbols::singleton = GameSymbols();
 static AccessorTable gameTable[] =
 {
 //	  name,                            rettype,                  setorget,     var,                  numindex,       funcFlags,                            numParams,   params
+	{ "IncrementQuest",                   ZVARTYPEID_FLOAT,         GETTER,       INCQST,                 1,             0,                                    1,           {  ZVARTYPEID_GAME,          -1,                               -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1                           } },
 	{ "MaxNPCs",                   ZVARTYPEID_FLOAT,         GETTER,       SPRITEMAXNPC,                 1,             0,                                    1,           {  ZVARTYPEID_GAME,          -1,                               -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1                           } },
 	{ "MaxNPCs",                   ZVARTYPEID_VOID,          SETTER,       SPRITEMAXNPC,                 1,             0,                                    2,           {  ZVARTYPEID_GAME,           ZVARTYPEID_FLOAT,        -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1                           } },
 	{ "MaxLWeapons",                   ZVARTYPEID_FLOAT,         GETTER,       SPRITEMAXLWPN,                 1,             0,                                    1,           {  ZVARTYPEID_GAME,          -1,                               -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1                           } },
